# fpl-sim

./: PROMPTS.md  README.md  pyproject.toml
fpl_eo_sim/: __init__.py  cli.py  metrics.py  models.py  sampling.py  simulator.py  simulator_backup.py  strategies.py
learner/: __init__.py  callbacks.py  constants.py  env.py  npc.py  points.py  policy.py  pool.py  train.py
tests/: __init__.py  test_learner_env.py  test_models.py  test_npc_diversity.py  test_npc_points_print.py  test_sampling.py  test_simulator.py  test_strategies.py
