[tool.poetry]
name = "fpl-eo-sim"
version = "0.1.0"
description = "FPL EO-Only Simulator - A tiny, readable simulator to study ownership-only strategies"
authors = ["Belkacem Berchiche <b_berchiche@esi.dz>"]
readme = "README.md"
packages = [{include = "fpl_eo_sim"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
fpl-sim = "fpl_eo_sim.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
